# Praca_magisterska_Dokubot

./: .dockerignore  .gitignore  .slugignore  Dockerfile  LICENSE  README.md  app.py  article_scraper.py  create_database.ipynb  create_database.py  data_acquisition.py  main.py  polish_articles_urls.txt  preprocess_data.py  pyproject.toml  requirements.txt  tfidf.py
Dokubot/: Dialga.py  LoadModels.py  LogicHandler.py
Dokubot/TrainModel/: MimicTrain.py  README.txt  SlotTraining.py
Models_deploy/: char_tok_small.json  mimic_ls11.h5  mimic_ls12.h5  mimic_ls13.h5  mimic_ls14.h5  mimic_super_smol.h5  slot_lookup_mimic4.json
Models_deploy/Spacy_md/: config.cfg  meta.json
Models_deploy/Spacy_md/ner/: moves
Models_deploy/Spacy_md/tagger/: cfg
Models_deploy/spacy_sm/: config.cfg  meta.json
Models_deploy/spacy_sm/lemmatizer/: model
Models_deploy/spacy_sm/morphologizer/: model
Models_deploy/spacy_sm/parser/: model  moves
Models_deploy/spacy_sm/senter/: model
Question_generator/: QG2.ipynb  QuestionGenerator.py  sentence_blocks.py
create_lookup/: choice_lookup.py  doc_lookup.py
data/functionalities/lookups/: lookup_choice.json  lookup_docs.json  lookup_slot.json  lookup_slot2.json  slot_lookup_mimic4.json
data/questions/: dokubot_slot_data4.csv
data/tables/: metadata_table.csv
data_logs/error_logs/: token_error_logs.txt  url_error_logs.txt
data_logs/update_logs/: update_logs.txt
models/mimic/: Untitled.ipynb  mimic_ls
preprocess/: data2table.py  pdf2text.py  text2data.py
static/styles/: style.css
templates/: index.html
(+13 files in other folders)
