[tool.poetry]
name = "dokubot"
version = "0.1.0"
description = ""
authors = ["Benu13 <lukaszbednarek37@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyMuPDF = "^1.20.2"
spacy = "^3.4.1"
nltk = "^3.7"
scikit-learn = "^1.1.1"
yake = "^0.4.8"
more-itertools = "^8.13.0"
beautifulsoup4 = "^4.11.1"
Unidecode = "^1.3.4"
pandas = "^1.4.3"
lxml = "^4.9.1"


[tool.poetry.dependencies.pl_core_news_lg]
url = "https://github.com/explosion/spacy-models/releases/download/pl_core_news_lg-3.4.0/pl_core_news_lg-3.4.0.tar.gz"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
